# sour

./: .gitignore  .pre-commit-hooks.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  demo_just.md  demo_tree.md  justfile
examples/nested/: README.md  level_1.py
examples/nested/even_more_nested/: README.md  level_2.py
examples/nested/even_more_nested/most_nested/: level_3.py
src/knit/: core.py  main.py  registry.py
src/knit/extensions/: just.py  tree.py
src/sole/: main.py  registry.py
src/sole/extensions/: just.py  tree.py
src/sour/: main.py  registry.py
src/sour/extensions/: just.py  tree.py
tests/: smoke_test.py  test_core.py  test_extensions_just.py  test_extensions_tree.py  test_registry.py  test_version.py
